--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="img1">
         <img src="images/gym img2.jpg" alt="">
         <p class="sentence1">
-            **JASS Fitness Center** is a place where your fitness journey begins and thrives. We believe in pushing
+            JASS Fitness Center - is a place where your fitness journey begins and thrives. We believe in pushing
             boundaries and helping you reach new heights in your physical and mental well-being.
             <br><br>
             Our gym is equipped with state-of-the-art equipment, designed to cater to every aspect of fitness, from
